Update HackTheU  MapDiscover.html
Added game over condition to move to game over screen

--- a/HackTheU  MapDiscover.html
+++ b/HackTheU  MapDiscover.html
@@ -96,6 +96,7 @@
         if(pings <= 0)
         {
           pings = 0;
+          location.replace("file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/GameOver.html");
         }
         document.getElementById("logoDiv").innerHTML = "Pings: " + pings+"<br>"+"Goal: " + goal;
         });
