Added Credits html
Added Credits.html and added link from home to credits.

--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
     <form action='file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/HackTheU%20%20MapDiscover.html'>
     <input type="submit" value="Start">
     </form>
-    <form action=''>
+    <form action='file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/Credits.html'>
         <input type="submit" value="Credits">
     </form>
   </body>
