--- a/Home.html
+++ b/Home.html
@@ -2,18 +2,28 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-  <title>Home</title>
-  
-  </head>
-  <body>
-    <h2>Insert Game Title Here</h2>
-    <form action='file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/HackTheU%20%20MapDiscover.html'>
-    <input type="submit" value="Start">
-    </form>
-    <form action='file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/Credits.html'>
-        <input type="submit" value="Credits">
-    </form>
-  </body>
-  </html>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <title>Home</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="Styles.css">
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row justify-content-md-center">
+            <h2>Insert Game Title Here</h2>
+        </div>
+        <div class="row justify-content-md-center"> 
+            <form action='file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/HackTheU%20%20MapDiscover.html'>
+                <input type="submit" value="Start" class="btn-primary" style="margin-right: 20px">
+            </form>
+            <form action='file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/Credits.html'>
+                <input type="submit" value="Credits" class="btn-secondary">
+            </form>
+        </div>
+    </div>
+
+</body>
+
+</html>
