--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
             <h2>Insert Game Title Here</h2>
         </div>
         <div class="row justify-content-md-center"> 
-            <form action='file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/HackTheU%20%20MapDiscover.html'>
+            <form action='file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/Instructions.html'>
                 <input type="submit" value="Start" class="btn-primary" style="margin-right: 20px">
             </form>
             <form action='file:///C:/Users/jef_l/Documents/GitHub/HackTheUDiscovery/Credits.html'>
